<resources>
    <string name="app_name">Habits tracker</string>
    <string name="habits_activity">Your habits</string>
    <string name="add_habit">Add new habit</string>
    <string name="title_input_hint">Title</string>
    <string name="useful_radio_value">Useful</string>
    <string name="harmful_radio_value">Harmful</string>
    <string name="repetition_count_hint">Count</string>
    <string name="frequency_hint">Frequency</string>
    <string name="habit_description_hint">Description</string>
    <string name="create_habit_button_text">Create</string>
    <string name="edit_habit">Edit habit</string>
    <string name="edit_button_label">Save</string>
    <string name="frequency_card_label">Frequency: %1$d</string>
    <string name="count_card_label">Count: %1$d</string>

    <string name="view_pager_useful">Useful</string>
    <string name="view_pager_harmful">Harmful</string>
    <string name="nav_header_text">Habits tracker</string>
    <string name="about_app">About app</string>
    <string name="exit_title">Are you sure you want to exit?</string>
    <string name="exit_message">Habit will not be saved</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_filled_data_toast_message">All fields must be filled in</string>
    <string name="app_powered_by">App powered by Vabyars</string>
    <string name="app_description">Create a habit list to build good habits and healthy lifestyle with Habit tracker</string>
    <string name="app_version_text">HabitsTracker v4.0</string>
    <string name="git_link_text">Github: github.com/vabyars </string>
    <string name="you_are_breathtaking" translatable="false">You are breathtaking!</string>
    <string name="you_should_not_do_this_habit_more">You should not do this habit more</string>
    <string name="you_have_already_done_enough">You have already done enough</string>
    <string name="stop_doing_this_habit">Stop performing this habit</string>
    <string name="you_have_to_do_this_habit">You should do this habit %1$s more time(s)</string>
    <string name="you_can_do_this_habit">You can do this habit %1$s more time(s)</string>
    <string name="undo">undo</string>

    <string name="find_or_filter_title">Find or filter habits</string>
    <string name="search">Search</string>
    <string-array name="priority_items">
        <item>Normal</item>
        <item>Low</item>
        <item>High</item>
    </string-array>
</resources>